# ReEDS-CEPM

./: .buildinfo  .gitignore  AGENT.md  AGENTS.md  README.md  REPORT_OUTPUT_LOGIC.md  TESTING.md  Testing.ipynb  UV_MAMBA_GUIDE.md  b_inputs.gms  bokehpivot.html  bootstrap_reeds.ps1  cases.csv  cases_categorized.csv  cases_cepm.csv  cases_small.csv  cases_test.csv  cepm_scenarios_changelog.md  d_solveprep.gms  developer_best_practices.html  diagnose.html  faq.html  genindex.html  index.html  markdown_cheat_sheet.html  model_documentation.html  objects.inv  postprocessing_tools.html  publications.html  pyproject.toml  reeds_training_homework.html  retail_rate_module.html  revalue.html  run.py  runbatch.py  runfiles.csv  runreeds.py  search.html  searchindex.js  setup.html  (+3 more)
.doctrees/: bokehpivot.doctree  developer_best_practices.doctree  diagnose.doctree  faq.doctree  index.doctree  markdown_cheat_sheet.doctree  model_documentation.doctree  postprocessing_tools.doctree  publications.doctree  reeds_training_homework.doctree  retail_rate_module.doctree  revalue.doctree  setup.doctree  tableau.doctree  user_guide.doctree
.github/: PULL_REQUEST_TEMPLATE.md
.github/workflows/: build-docs.yaml  python-app.yaml  update-sources-docs.yaml
ReEDS.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
docs/: internal-ci-testing.md
docs/source/: conf.py  developer_best_practices.md  faq.md  model_documentation.md  (+3 more)
helpers/: interim_report_batch.py  restart_runs.py  runstatus.py
hourlize/: README.md  pyproject.toml  resource.py
input_processing/: copy_files.py  h5_to_gdx.py  hourly_repperiods.py  mcs_sampler.py  outage_rates.py  recf.py  transmission.py
inputs/: scalars.csv
postprocessing/: cleanup_files.py  input_plots.py  run_pcm.py  run_reeds2pras.py  uncertainty_plots.py
preprocessing/: casemaker.py
reeds/: __init__.py  inputs.py  io.py  parse.py  prasplots.py  reedsplots.py
tests/: objective_function_params.yaml  test_outputs.py
(+71 files in other folders)
