[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ReEDS"
version = "2024.0.0"
requires-python = "==3.11.*"
description = "ReEDS-2.0 Python environment managed with uv"
readme = "README.md"
dependencies = [
  "bokeh==3.2.*",
  "click==8.0.*",
  "gitpython==3.1.*",
  "h5py==3.9.*",
  "matplotlib==3.7.*",
  "numpy==1.26.*",
  "openpyxl==3.0.*",
  "pandas==2.0.*",
  "tables==3.11.1",
  "pytest==7.4.*",
  "requests==2.31.*",
  "scikit-learn==1.2.*",
  "scipy==1.11.*",
  "tqdm==4.65.*",
  "cmocean==3.0.3",
  "gdxpds==1.4.0",
  "geopandas==0.14.0",
  "pulp==2.7.0",
  "shapely==2.0.1",
  "pyyaml==6.0.*",
  # etoolbox provides a number of useful tools for working with data. It also includes
  # functions and infrastructure for accessing PUDL data stored on GCS so the sqlite
  # database is not requried
  "rmi.etoolbox @ git+https://github.com/rmi/etoolbox.git",
]

[project.optional-dependencies]
interactive = [
  "ipykernel==6.25.*",
  "ipywidgets==8.0.*",
  "notebook==6.5.*",
]

maps = [
  "fiona==1.9.5",
  "folium==0.14.0",
  "mapclassify==2.5.*",
  "pyproj==3.6.1",
]

docs = [
  "sphinx==7.2.6",
  "myst-parser==2.0.0",
  "sphinx-rtd-theme==2.0.0",
  "sphinxcontrib-bibtex==2.6.2",
]

reporting = [
  "python-pptx==0.6.22",
]

network = [
  "networkx==3.1.*",
]

testing = [
  "gamspy-base==50.5.0",
]

dev = [
  "ipykernel==6.25.*",
  "ipywidgets==8.0.*",
  "notebook==6.5.*",
  "fiona==1.9.5",
  "folium==0.14.0",
  "mapclassify==2.5.*",
  "pyproj==3.6.1",
  "sphinx==7.2.6",
  "myst-parser==2.0.0",
  "sphinx-rtd-theme==2.0.0",
  "sphinxcontrib-bibtex==2.6.2",
  "python-pptx==0.6.22",
  "networkx==3.1.*",
  "gamspy-base==50.5.0",
]

[tool.setuptools]
include-package-data = true

[tool.setuptools.packages.find]
where = ["."]
include = ["hourlize*", "reeds*"]
exclude = ["inputs*"]
